--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
     tools:context="com.example.android.justjava.MainActivity">
 
     <TextView
-        android:id="@+id/header"
+        android:id="@+id/quantity_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="quantity"
@@ -27,7 +27,23 @@
         android:textSize="16sp"
         android:textColor="@android:color/black"
         android:textAllCaps="true" />
+    <TextView
+        android:id="@+id/price_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="price"
+        android:textAllCaps="true" />
 
+    <TextView
+        android:id="@+id/price_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingTop="16dp"
+        android:paddingBottom="16dp"
+        android:text="$0"
+        android:textSize="16sp"
+        android:textColor="@android:color/black"
+        android:textAllCaps="true" />
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
