--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,16 +17,29 @@
         android:text="quantity"
         android:textAllCaps="true" />
 
+    <Button
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:text="+"
+        android:onClick="increment"/>
+
     <TextView
         android:id="@+id/quantity_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="16dp"
         android:paddingBottom="16dp"
-        android:text="0"
+        android:text="2"
         android:textSize="16sp"
         android:textColor="@android:color/black"
         android:textAllCaps="true" />
+
+    <Button
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:text="-"
+        android:onClick="decrement"/>
+
 
     <TextView
         android:id="@+id/price_title"
@@ -41,7 +54,7 @@
         android:layout_height="wrap_content"
         android:paddingTop="16dp"
         android:paddingBottom="16dp"
-        android:text="$0"
+        android:text="$10"
         android:textSize="16sp"
         android:textColor="@android:color/black"
         android:textAllCaps="true" />
