--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
             android:id="@+id/quantity_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="0"
+            android:text="2"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:textAllCaps="true"
@@ -61,8 +61,7 @@
         android:layout_height="wrap_content"
         android:paddingBottom="16dp"
         android:paddingTop="16dp"
-        android:text="Total: $0.00"
-        android:textAllCaps="true"
+        android:text="$10"
         android:textColor="@android:color/black"
         android:textSize="16sp" />
 
